# super-grpc

./: .gitignore  Dockerfile  README.md  config.yaml  dump.rdb  entrypoint.sh  nltk_dl.py  prefetch_experiment_results.csv  requirements-dev.txt  requirements.txt  setup.py
.devcontainer/: Dockerfile  devcontainer.json  requirements.txt
awslambda/: README.md  samconfig.toml  template.txt.backup
awslambda/.aws-sam/: build.toml
awslambda/batch_creation/: app.py  requirements.txt
awslambda_text/: template.yaml
awslambda_text/batch_creation/: app.py  requirements.txt
awslambda_text/events/: event.json
backup/: coordinator copy.py  coordinator.py  logger_config.py  server.py  token_bucket_queue.py  token_bucket_rate.py
backup/awslambda/: coordinator copy.py
backup/data_objects/: batch.py  job.py  (+1 more)
client/: client.py  pyproject.toml
client/src/: cache_coordinator_pb2_grpc.py  super_client.py
client/src/super_client.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
conf/: config.yaml
costing/: calc_cost.py
eval/: ping_serverless.py
lambda/: template.yaml  useful.txt
proto/: cache_coordinator.proto  cache_coordinator_pb2.py  cache_coordinator_pb2_grpc.py
protos/: cache_coordinator.proto  cache_coordinator_pb2_grpc.py
server/: config.yaml  coordinator.py  example_lambda.py  server.py
simulation/: next_event.py  next_event_dummy.py  next_event_sim.py  sim_super.py
superdl/: args.py  awsutils.py  batch.py  coordinator copy.py  coordinator.py  dataset.py  epoch.py  job.py  sampling.py  server.py  test_client.py  test_queue.py  utils.py
(+53 files in other folders)
